--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,10 @@
   
     <!-- Import Icon for Materializecss -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
+
+    <!-- Import Video-React -->
+    <link rel="stylesheet" href="/css/video-react.css" />
+
     <!-- Debug for passport-facebook callback url -->
     <script type="text/javascript">
       if (window.location.hash && window.location.hash == '#_=_') {
