add react-materilize to fix Collapsible bug

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,15 +8,12 @@
     <!-- Import Google Icon Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
   
-    <!-- Compiled and minified Materializecss CSS -->
+    <!-- Import materialize.css  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   
     <!-- Import google font Baumans-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Baumans">
   
-    <!-- Import Icon for Materializecss -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" >
-
     <!-- Import Video-React -->
     <link rel="stylesheet" href="/css/video-react.css" />
 
@@ -37,7 +34,7 @@
       <!--Import jQuery-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   
-      <!-- Compiled and minified materializecss.js JavaScript -->
+      <!-- CImport jQuery before materialize.js -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   
       <!-- And then your bundled js -->
